Grueling progress. Everything is on the page but the buttons don't resize correctly and the images and text don't quite align.

--- a/index.css
+++ b/index.css
@@ -27,22 +27,45 @@ body{
     max-width:100%;
 }
 
+.divOne{
+  display:inline-block;
+}
+
+
+.footer{
+  max-width:100%;
+}
+
 h1{
     font-family:'Chelsea Market';
     font-size:5rem;
-    margin:2% auto;
+    margin:2%;
+    display:inline-block;
+    text-align:right;
+}
+
+.header{
+  max-width:20%;
+  border-radius:50%;
 }
 
 h3{
     font-size:1.5rem;
     max-width: 30%;
-    margin:3% auto;
+    display:inline-block;
+    text-align:right;
 }
+
+
 
 .caliClass{
     font-size:1.5rem;
     max-width: 40%;
-    margin:2% auto;
+    text-align:right;
+}
+
+.parkPic{
+    max-width:5%;
 }
 
 #mainBody{
@@ -76,17 +99,34 @@ section{
 
 .planVisit{
     background-color:#FF764E;
+    padding:2% 2%;
+    margin:5%;
+    border-radius:25px;
+    color:white;
+    font-size:1rem;
 }
 
 .learnPark{
     background-color:#5ED3EB;
+    padding:2% 2%;
+    margin:5%;
+    border-radius:25px;
+    color:white;
+    font-size:1rem;
 }
 
 .getInvolved{
     background-color:#FFCD69;
+    padding:2% 2%;
+    margin:5%;
+    border-radius:25px;
+    color:white;
+    font-size:1rem;
 }
 
 footer{
   background-color:#F9E7DC;
-
+  border:1% solid #F9E7DC;
+  width:100%;
+  padding:2%;
 }
